<resources>
    <string name="app_name">MathWithMe</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">repeat password</string>
    <string name="email">email</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="quadratic_equation">Quadratic Equation</string>
    <string name="choose_difficulty_text">Choose difficulty</string>
    <string name="login_error_message">Log in failed, Please try again</string>
    <string name="sign_up_error_message">Sign up failed, Please try again</string>
    <string name="preference_file_key">kkkk.mathwithme.PREFERENCE_FILE_KEY</string>
</resources>
